--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,16 @@ files:
     destination: /var/www/my-angular-project
 permissions:
   - object: /var/www/my-angular-project
-    pattern: "**"
+    pattern: '**'
+    mode: '0755'
     owner: root
     group: root
-    mode: 755
     type:
       - file
       - directory
 hooks:
   ApplicationStart:
-    - location: deploy-scripts/application-start.sh
+    - location: deploy-scripts/application-start-hook.sh
       timeout: 300
+  # ValidateService:
+  #   - location: deploy-scripts/simulate-failure.sh
