--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,9 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [
-      "@angular/localize"
-    ]
+    "types": []
   },
   "files": [
     "src/main.ts",
