--- a/appspec.yml
+++ b/appspec.yml
@@ -6,7 +6,7 @@ files:
 permissions:
   - object: /var/www/my-angular-project
     pattern: '**'
-    mode: '0755'
+    mode: 755
     owner: root
     group: root
     type:
@@ -14,7 +14,5 @@ permissions:
       - directory
 hooks:
   ApplicationStart:
-    - location: deploy-scripts/application-start-hook.sh
+    - location: deploy-scripts/application-start.sh
       timeout: 300
-  # ValidateService:
-  #   - location: deploy-scripts/simulate-failure.sh
