--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,17 +2,15 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 12
+      nodejs: 20
     commands:
-      - npm install -g @angular/cli@9.0.6
+      - npm install -g @angular/cli@17
   pre_build:
     commands:
       - npm install
   build:
     commands:
-      - ng build --prod
-    finally:
-      - echo This is the finally block execution!
+      - ng build -c production
 artifacts:
   files:
     - 'dist/my-angular-project/**/*'
