--- a/unit-test-buildspec.yml
+++ b/unit-test-buildspec.yml
@@ -1,10 +1,14 @@
 version: 0.2
 phases:
-  install:
+  install: 
     runtime-versions:
-      nodejs: 12
+      nodejs: 20
     commands:
-      - npm install -g @angular/cli@9.0.6
+      - npm install -g @angular/cli@17
+      - wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmor | tee /etc/apt/keyrings/chrome.gpg
+      - echo "deb [signed-by=/etc/apt/keyrings/chrome.gpg] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
+      - apt-get -y update
+      - apt-get -y install google-chrome-stable
   pre_build:
     commands:
       - npm install
