--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: dist/my-angular-project
+  - source: /
     destination: /var/www/my-angular-project
 permissions:
   - object: /var/www/my-angular-project
