--- a/appspec.yml
+++ b/appspec.yml
@@ -1,14 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: dist/my-angular-project
     destination: /var/www/my-angular-project
 permissions:
   - object: /var/www/my-angular-project
-    pattern: '**'
-    mode: 755
+    pattern: "**"
     owner: root
     group: root
+    mode: 755
     type:
       - file
       - directory
