--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,10 @@ phases:
     runtime-versions:
       nodejs: 20
     commands:
-      - npm install -g @angular/cli@17
+      - npm update && npm install -g @angular/cli@17
   pre_build:
     commands:
-      - npm install
+      - npm update && npm install
   build:
     commands:
       - ng build -c production
