--- a/unit-test-buildspec.yml
+++ b/unit-test-buildspec.yml
@@ -11,7 +11,7 @@ phases:
       - apt-get -y install google-chrome-stable
   pre_build:
     commands:
-      - npm install
+      - npm update && npm install
   build:
     commands:
       - ng test --no-watch --no-progress --browsers=ChromeHeadlessCI
